Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Meteorite by possibilities</title>
+    <title>Meteorite by oortcloud</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -19,11 +19,11 @@
       <header>
         <h1>Meteorite</h1>
         <p>Installer &amp; smart package manager for Meteor</p>
-        <p class="view"><a href="https://github.com/possibilities/meteorite">View the Project on GitHub <small>possibilities/meteorite</small></a></p>
+        <p class="view"><a href="https://github.com/oortcloud/meteorite">View the Project on GitHub <small>oortcloud/meteorite</small></a></p>
         <ul>
-          <li><a href="https://github.com/possibilities/meteorite/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/possibilities/meteorite/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/possibilities/meteorite">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/oortcloud/meteorite/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/oortcloud/meteorite/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/oortcloud/meteorite">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -126,20 +126,10 @@
       </section>
     </div>
     <footer>
-      <p>Project maintained by <a href="https://github.com/possibilities">possibilities</a></p>
+      <p>Project maintained by <a href="https://github.com/oortcloud">oortcloud</a></p>
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-33060395-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
+    
   </body>
 </html>
