Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <h2>What is it?</h2>
 
-<p>A Meteor installer, and smart-package manager wrapped around the meteor command line interface. (Inspired by gem, bundler &amp; rvm)</p>
+<p>A Meteor installer, and smart-package manager wrapped around the meteor command line interface. (Inspired by gem, bundler, rvm and Meteor)</p>
 
 <h2>How do I use it?</h2>
 
