Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Meteorite : Installer &amp; smart package manager for Meteor" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Meteorite by oortcloud</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>Meteorite</title>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/oortcloud/meteorite">View on GitHub</a>
-
-          <h1 id="project_title">Meteorite</h1>
-          <h2 id="project_tagline">Installer &amp; smart package manager for Meteor</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/oortcloud/meteorite/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/oortcloud/meteorite/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <header>
+        <h1>Meteorite</h1>
+        <p>Installer &amp; smart package manager for Meteor</p>
+        <p class="view"><a href="https://github.com/oortcloud/meteorite">View the Project on GitHub <small>oortcloud/meteorite</small></a></p>
+        <ul>
+          <li><a href="https://github.com/oortcloud/meteorite/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/oortcloud/meteorite/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/oortcloud/meteorite">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>Meteorite</h1>
 
 <p><em>Making Meteor devs happy since 2012</em></p>
@@ -143,16 +139,11 @@ sudo apt-get install nodejs
 <p>See <a href="https://github.com/oortcloud/meteorite/wiki/Contributing">Contributing</a></p>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Meteorite maintained by <a href="https://github.com/oortcloud">oortcloud</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/oortcloud">oortcloud</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
