Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
 <p><strong>Note:</strong> Meteorite does not work on Ubuntu 12.04's default Node.js v0.6 (<a href="https://github.com/oortcloud/meteorite/issues/67">issue #67</a>). To fix this, install a recent version of Node.js via <a href="https://launchpad.net/%7Echris-lea/+archive/node.js/">this PPA</a> or by compiling from source.</p>
 
+<p><strong>Second Note:</strong> You'll also need to ensure you have <a href="http://git-scm.com">git</a> installed and available in your path.</p>
+
 <h2>Usage</h2>
 
 <h3><code>mrt create &lt;name&gt;</code></h3>
